m/n/core: run dedicated PID 1 reaper
This introduces minit, a tiny init implementation, written in C, built
against musl. It does one thing: reap children. No support for TTY, no
configurability, just the bare minimum for a working system.

We also drive-by remove some dead code from main.go.

This solves https://github.com/monogon-dev/monogon/issues/15

Change-Id: I666ff2042f19639465ff918590a39b8e219ee7d6
Reviewed-on: https://review.monogon.dev/c/monogon/+/346
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -35,7 +35,7 @@ erofs_image(
         "/data",
     ],
     files = {
-        "//metropolis/node/core": "/init",
+        "//metropolis/node/core": "/core",
 
         # CA Certificate bundle & os-release & resolv.conf
         # These should not be explicitly used by Metropolis code and are only here for compatibility with
@@ -79,6 +79,7 @@ erofs_image(
         "@com_github_go_delve_delve//cmd/dlv:dlv": "/dlv",
     },
     files_cc = {
+        "//metropolis/node/core/minit": "/init",
         # runc runtime, with cgo
         "@com_github_opencontainers_runc//:runc": "/containerd/bin/runc",
         "@xfsprogs//:mkfs": "/bin/mkfs.xfs",
