m/node: move kernel cmdline to the unified kernel image
The upcoming installer code relies on its own params.

Change-Id: I6408ffa3f14ae184e05786a48b59499ac25d8928
Reviewed-on: https://review.monogon.dev/c/monogon/+/406
Reviewed-by: Leopold Schabel <leo@nexantic.com>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -93,6 +93,7 @@ erofs_image(
 
 efi_unified_kernel_image(
     name = "kernel_efi",
+    cmdline = "console=ttyS0 root=PARTLABEL=METROPOLIS-SYSTEM rootfstype=erofs init=/init",
     kernel = "//third_party/linux",
     os_release = ":os-release-info",
 )
