m/p/efivarfs: import the EFI boot entry data type
This imports marshal.go from the Softmetal project.

The complete MIT license under which it was released was added at the
start of the file. It was renamed to boot.go which better reflects its
purpose in its current context. The implementation was adapted for
Metropolis.

Change-Id: I41d1b10bf5105c52fa7de7695def5b6f3a9b192e
Reviewed-on: https://review.monogon.dev/c/monogon/+/427
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/pkg/efivarfs/BUILD.bazel
+++ b/metropolis/pkg/efivarfs/BUILD.bazel
@@ -2,8 +2,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["efivarfs.go"],
+    srcs = [
+        "boot.go",
+        "efivarfs.go",
+    ],
     importpath = "source.monogon.dev/metropolis/pkg/efivarfs",
     visibility = ["//visibility:public"],
-    deps = ["@org_golang_x_text//encoding/unicode:go_default_library"],
+    deps = [
+        "@org_golang_x_text//encoding/unicode:go_default_library",
+        "@org_golang_x_text//transform:go_default_library",
+    ],
 )
