m/node: add a crude MVP bundle
Since the bundle format will likely need some more time cooking let's
just use a quick'n'dirty ZIP file for now. This is explicitly not stable
and will be replaced by the actual bundle format before release. But
it allows us to untangle various parts of the installer machinery and
land them while this is still cooking.

Change-Id: I7ba7875232e4b9a03a4dd564f2ca02d2663f829c
Reviewed-on: https://review.monogon.dev/c/monogon/+/430
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("//metropolis/node/build:def.bzl", "erofs_image")
 load("//metropolis/node/build:efi.bzl", "efi_unified_kernel_image")
+load("@rules_pkg//:pkg.bzl", "pkg_zip")
 
 go_library(
     name = "go_default_library",
@@ -96,6 +97,17 @@ efi_unified_kernel_image(
     cmdline = "console=ttyS0 root=PARTLABEL=METROPOLIS-SYSTEM rootfstype=erofs init=/init",
     kernel = "//third_party/linux",
     os_release = ":os-release-info",
+)
+
+# An intermediary "bundle" format until we finalize the actual bundle format. This is NOT stable until migrated
+# to the actual bundle format.
+# TODO(lorenz): Replace this
+pkg_zip(
+    name = "node",
+    srcs = [
+        ":kernel_efi",
+        ":rootfs",
+    ],
 )
 
 genrule(
