m/t/launch: multi-node launches, prefixed stdout
This reinstantiates //:launch-test2, with some small fixes for usability
(prefixed stdout and GetNodes retries to handle cluster connectivity
issues as the cluster grows).

We also drive-by port //:launch-test2 and //:launch to use the new and
shiny clicontext package.

Change-Id: I62a1d827b2087f1173abf19e792a2088dc8b80bb
Reviewed-on: https://review.monogon.dev/c/monogon/+/485
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/test/launch/cluster/BUILD.bazel
+++ b/metropolis/test/launch/cluster/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "cluster.go",
         "insecure_key.go",
+        "prefixed_stdio.go",
     ],
     data = [
         "//metropolis/node:image",
@@ -20,6 +21,7 @@ go_library(
         "//metropolis/node:go_default_library",
         "//metropolis/node/core/identity:go_default_library",
         "//metropolis/node/core/rpc:go_default_library",
+        "//metropolis/pkg/logbuffer:go_default_library",
         "//metropolis/proto/api:go_default_library",
         "//metropolis/proto/common:go_default_library",
         "//metropolis/test/launch:go_default_library",
