--- a/metropolis/test/launch/cli/launch-multi2/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch-multi2/BUILD.bazel
@@ -5,7 +5,10 @@ go_library(
     srcs = ["main.go"],
     importpath = "source.monogon.dev/metropolis/test/launch/cli/launch-multi2",
     visibility = ["//visibility:private"],
-    deps = ["//metropolis/pkg/logbuffer:go_default_library"],
+    deps = [
+        "//metropolis/cli/pkg/context:go_default_library",
+        "//metropolis/test/launch/cluster:go_default_library",
+    ],
 )
 
 go_binary(
