--- a/metropolis/node/core/consensus/BUILD.bazel
+++ b/metropolis/node/core/consensus/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "consensus.go",
         "logparser.go",
         "status.go",
+        "testhelpers.go",
     ],
     importpath = "source.monogon.dev/metropolis/node/core/consensus",
     visibility = ["//:__subpackages__"],
