m/t/installer: resolve deps with bazel.Runfile
Change-Id: Ie69b8b6ef12028264d1c396dacb3c00be795ad44
Reviewed-on: https://review.monogon.dev/c/monogon/+/455
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/test/installer/BUILD.bazel
+++ b/metropolis/test/installer/BUILD.bazel
@@ -25,5 +25,6 @@ go_library(
         "@com_github_diskfs_go_diskfs//:go_default_library",
         "@com_github_diskfs_go_diskfs//disk:go_default_library",
         "@com_github_diskfs_go_diskfs//partition/gpt:go_default_library",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
