m/n/c/cluster: retrieve node parameters from GCP metadata
This allows configuration via GCP instance metadata.

Change-Id: I56609019cef998aa779c5a602232767b920a9721
Reviewed-on: https://review.monogon.dev/c/monogon/+/462
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/cluster/BUILD.bazel
+++ b/metropolis/node/core/cluster/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "cluster.go",
         "cluster_bootstrap.go",
+        "platform.go",
         "status.go",
         "watcher.go",
     ],
@@ -24,6 +25,7 @@ go_library(
         "//metropolis/proto/api:go_default_library",
         "//metropolis/proto/common:go_default_library",
         "//metropolis/proto/private:go_default_library",
+        "@com_github_cenkalti_backoff_v4//:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
