m/c/metroctl: add takeownership command
This add a simple command to take ownership of a cluster previously
installed using metroctl install. It calls the newly-formed cluster and
retrieves a signed owner certificate for the owner key and stores that
to disk for further use by metroctl.

Change-Id: Ibd2771c571bda41270c3bbb110105f4f8f5b118d
Reviewed-on: https://review.monogon.dev/c/monogon/+/463
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "install.go",
         "main.go",
+        "takeownership.go",
     ],
     data = [
         "//metropolis/node",
@@ -14,6 +15,9 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//metropolis/cli/metroctl/core:go_default_library",
+        "//metropolis/cli/pkg/context:go_default_library",
+        "//metropolis/node:go_default_library",
+        "//metropolis/node/core/rpc:go_default_library",
         "//metropolis/proto/api:go_default_library",
         "@com_github_adrg_xdg//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
