m/t/installer: deflake by silencing kernel logs
The installer test was failing due to the success flag getting broken
in two by the kernel logs, like this:
>TestOS launched successfully! _TESTOS_LAUNCH_SUC[    0.963289] kvm:
>exiting hardware virtualizationCESS_

This change addresses this problem by setting an adequate loglevel for
both the installer and testos kernels.

m/t/installer/BUILD.bazel now defines its own unified kernel image
target with a custom kernel cmdline needed for test purposes.

Change-Id: I43547b6c81f8a1ebc4facb841a600b155af581df
Reviewed-on: https://review.monogon.dev/c/monogon/+/464
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/node/installer/BUILD.bazel
+++ b/metropolis/node/installer/BUILD.bazel
@@ -27,7 +27,7 @@ node_initramfs(
     files = {
         "//metropolis/node/installer": "/init",
     },
-    visibility = ["//visibility:private"],
+    visibility = ["//metropolis/test/installer:__pkg__"],
 )
 
 os_release(
@@ -39,7 +39,6 @@ os_release(
 
 efi_unified_kernel_image(
     name = "kernel",
-    cmdline = "console=ttyS0",
     initramfs = ":initramfs",
     kernel = "//third_party/linux",
     os_release = ":installer-release-info",
