m/{t,n}/installer: move to m/installer
Change-Id: I8fd15f1fa1e151369df251d1469e84cfeffd26fd
Reviewed-on: https://review.monogon.dev/c/monogon/+/510
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -8,8 +8,8 @@ go_library(
         "takeownership.go",
     ],
     data = [
+        "//metropolis/installer:kernel",
         "//metropolis/node",
-        "//metropolis/node/installer:kernel",
     ],
     importpath = "source.monogon.dev/metropolis/cli/metroctl",
     visibility = ["//visibility:private"],
