--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -6,7 +6,7 @@ go_test(
     size = "small",
     data = [
         ":kernel",
-        "//metropolis/test/installer/testos:testos_bundle",
+        "//metropolis/installer/test/testos:testos_bundle",
         "//third_party/edk2:firmware",
         "@qemu//:qemu-x86_64-softmmu",
     ],
@@ -17,7 +17,7 @@ go_test(
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "source.monogon.dev/metropolis/test/installer",
+    importpath = "source.monogon.dev/metropolis/installer/test",
     visibility = ["//visibility:private"],
     deps = [
         "//metropolis/cli/metroctl/core:go_default_library",
@@ -34,7 +34,7 @@ go_library(
 efi_unified_kernel_image(
     name = "kernel",
     cmdline = "loglevel=0 console=ttyS0",
-    initramfs = "//metropolis/node/installer:initramfs",
+    initramfs = "//metropolis/installer:initramfs",
     kernel = "//third_party/linux",
     visibility = ["//visibility:private"],
 )
