m/n/installer: wait for ESP block device to show up
In real-world hardware disks do not always show up before the kernel
launches the init process. Wait up to 30s for the ESP to show up before
aborting because of that.

Change-Id: I3f7972e699a06d6f9d0333fe0ae3355ae3ce9c73
Reviewed-on: https://review.monogon.dev/c/monogon/+/513
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -39,6 +39,7 @@ os_release(
 
 efi_unified_kernel_image(
     name = "kernel",
+    cmdline = "console=ttyS0",
     initramfs = ":initramfs",
     kernel = "//third_party/linux",
     os_release = ":installer-release-info",
