metropolis: use hybrid consoles
This enables two consoles, one on the serial port and one on the
on-screen EFI framebuffer, if it exists. It also enables quiet mode
which stops Linux from logging purely informational messages to
the console making it hard to see our own output.

Change-Id: I25499a1dda8cf0c566878ac24877bf19b64ddda6
Reviewed-on: https://review.monogon.dev/c/monogon/+/517
Reviewed-by: Leopold Schabel <leo@nexantic.com>
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -39,7 +39,7 @@ os_release(
 
 efi_unified_kernel_image(
     name = "kernel",
-    cmdline = "console=ttyS0",
+    cmdline = "console=ttyS0,115200 console=tty0 quiet",
     initramfs = ":initramfs",
     kernel = "//third_party/linux",
     os_release = ":installer-release-info",
