--- a/metropolis/pkg/supervisor/BUILD.bazel
+++ b/metropolis/pkg/supervisor/BUILD.bazel
@@ -22,4 +22,5 @@ go_test(
     name = "go_default_test",
     srcs = ["supervisor_test.go"],
     embed = [":go_default_library"],
+    deps = ["//metropolis/pkg/logtree:go_default_library"],
 )
